--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
 /*******************************************/
 
 body {
+  font-family: "Mulish";
+  background: #f1f1f1;
+  color: #333;
+  line-height: 1.5;
 }
 
 /******************************************
