--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 /*******************************************/
 
 body {
-  font-family: "Mulish";
+  font-family: "Mulish", sans-serif;
   background: #f1f1f1;
   color: #333;
   line-height: 1.5;
@@ -59,6 +59,28 @@ img {
   font-family: "simple-line-icons";
   margin-right: 1em;
   vertical-align: middle;
+}
+
+.btn .dots::before {
+  margin-right: 0.5em;
+}
+
+.btn {
+  display: inline-block;
+  font-family: "Mulish", sans-serif;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+.btn-dark {
+  background: black;
+  color: white;
+}
+
+.btn-light {
+  background-color: white;
+  color: black;
 }
 
 /******************************************
@@ -111,10 +133,50 @@ header {
 
 /* Hero Section */
 .section-hero {
-  background: url("../images/salon-main-img.jpg");
+  position: relative;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0)
+    ),
+    url("../images/salon-main-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 50em;
+}
+
+.hours {
+  position: absolute;
+  top: 50%;
+  right: -160px;
+  transform: rotate(90deg);
+  font-family: "cinzel", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 300;
+  letter-spacing: 5px;
+  color: white;
+  display: block;
+  white-space: unset;
+  text-transform: uppercase;
+}
+
+.text-content {
+  width: 60%;
+  font-family: "cinzel", sans-serif;
+  padding: 10em 0;
+  color: #f1f1f1;
+}
+
+.main-header-text {
+  font-family: "cinzel", sans-serif;
+  font-size: 7em;
+  margin: 0;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.lead {
+  letter-spacing: 4px;
 }
 
 /******************************************
