Linked up the font awesome cdn

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,14 @@ img {
   margin: 0 auto;
 }
 
+.lead-body {
+  color: #737373;
+  font-size: 0.9rem;
+  font-weight: 300;
+  letter-spacing: 0.2px;
+  line-height: 2;
+}
+
 .search-icon::before {
   content: "\e090";
   font-family: "simple-line-icons";
@@ -210,16 +218,42 @@ header {
   text-transform: uppercase;
 }
 
-.box-body {
-  color: #737373;
-  font-size: 0.9rem;
-  font-weight: 300;
-  letter-spacing: 0.2px;
-  line-height: 2;
-}
-
 .img-icon {
   display: inline-block;
+}
+
+/* Video Section */
+.video-section {
+  background-color: #f3f4f6;
+  padding: 5em 0;
+}
+
+.video-text-content {
+  flex-basis: 50%;
+  padding-right: 5em;
+}
+
+.video-header {
+  font-family: "cinzel", sans-serif;
+  font-weight: 400;
+  font-size: 3rem;
+}
+
+.video-body {
+  margin-bottom: 2em;
+}
+
+.video-image-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.play-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /******************************************
