--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,83 @@ header {
   opacity: 0.5;
 }
 
+/* Promo Section */
+.promo-section {
+  background-image: url("../images/Promo-Banner-Image.jpg");
+  background-size: cover;
+  padding: 5em;
+  margin: 5em 0;
+  font-family: "cinzel", sans-serif;
+}
+
+.promo-body {
+  width: 50%;
+}
+
+.promo-body > h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.promo-body > h3 {
+  font-size: 2.8rem;
+  font-weight: 400;
+}
+
+/* Lookbook Section */
+.lookbook-section {
+  height: 170em;
+  padding: 0 2rem;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-rows: repeat(3, 1fr);
+  gap: 1rem;
+  grid-auto-flow: dense;
+}
+
+.grid-item {
+  background-size: cover;
+  min-height: 350px;
+}
+
+.grid-item:nth-child(2n):not(.grid-item:last-child) {
+  grid-row: span 2;
+}
+
+.photo-00 {
+  background-image: url("../images/gallery/Gallery-01.jpg");
+  background-size: cover;
+}
+.photo-01 {
+  background-image: url("../images/gallery/Masonry-01.jpg");
+  /* grid-row: 1/3;
+  grid-column: 2/3; */
+}
+
+.photo-02 {
+  background-image: url("../images/gallery/Gallery-02.jpg");
+}
+
+.photo-03 {
+  background-image: url("../images/gallery/Masonry-02.jpg");
+  /* grid-column: 1/2;
+  grid-row: 2/4; */
+}
+
+.photo-04 {
+  background-image: url("../images/gallery/Masonry-03.jpg");
+  grid-row: span 2;
+}
+
+.photo-05 {
+  background-image: url("../images/gallery/Gallery-04.jpg");
+  /* grid-column: 3/4;
+  grid-row: 2/4; */
+}
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
