--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,26 @@ header {
 .grid-item {
   background-size: cover;
   min-height: 350px;
+  cursor: pointer;
+  position: relative;
+}
+
+.grid-item::after {
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* z-index: -1; */
+}
+
+.grid-item:hover.grid-item::after {
+  opacity: 1;
 }
 
 .grid-item:nth-child(2n):not(.grid-item:last-child) {
