--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,21 @@ header {
   transform: translate(-50%, -50%);
 }
 
+@media screen and (max-width: 768px) {
+  .video-header {
+    font-size: 2rem;
+  }
+
+  .video-text-content {
+    flex-basis: 90%;
+    padding-right: 1em;
+  }
+
+  .play-icon {
+    width: 4rem;
+  }
+}
+
 /* Stylers And Promo Section */
 .stylers-section .flex {
   flex-wrap: wrap;
