Made the header in mobile responsive

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,13 @@ header {
   }
 }
 
+@media screen and (max-width: 500px) {
+  header {
+    height: unset;
+    overflow: unset;
+  }
+}
+
 /* Hero Section */
 .section-hero {
   position: relative;
