--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,16 @@ header {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .main-header-text {
+    font-size: 2.5rem;
+  }
+
+  .card {
+    display: none;
+  }
+}
+
 /* Section 3-column */
 .three-column {
   padding: 10em 0 5em;
