Made the video section  mobile section

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,12 @@ img {
   justify-content: space-between;
 }
 
+@media (max-width: 500px) {
+  .container {
+    padding: 0 2rem;
+  }
+}
+
 /******************************************
 /* LAYOUT
 /*******************************************/
@@ -391,6 +397,18 @@ header {
 }
 
 @media (max-width: 500px) {
+  .video-section .flex {
+    flex-direction: column;
+  }
+
+  .video-text-content {
+    padding-right: unset;
+    margin-bottom: 2em;
+  }
+
+  .video-header {
+    font-size: 1.5rem;
+  }
 }
 
 /* Stylers And Promo Section */
