--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ header {
 
 @media screen and (max-width: 500px) {
   header {
-    height: unset;
+    height: 10rem;
     overflow: unset;
   }
 }
@@ -291,6 +291,20 @@ header {
 }
 
 @media screen and (max-width: 500px) {
+  .section-hero {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 0)
+      ),
+      url("../images/salon-main-img.jpg");
+    background-position: 65% 0;
+  }
+
+  .text-content {
+    padding: 5em 0;
+  }
+
   .main-header-text {
     font-size: 2.5rem;
   }
